# fs-test-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: architecture.md  consumer-integration.md  multi-agent-protocol.md  triage-protocol.md  vocabulary.md
examples/minimal/: README.md  fs-test-harness.toml  harness.toml  test-matrix.json
runner/: Cargo.toml
runner/src/: config.rs  dispatch.rs  lib.rs  local_config.rs  matrix.rs  report.rs  substitution.rs  tests.rs  toml_adapter.rs
schemas/: harness.schema.json  test-matrix.schema.json
scripts/: _lib_harness.sh  claim-scenario.sh  reset-non-passed.sh  run-scenario.ps1  run-tests.sh  setup-local.sh  setup-windows-vm.ps1  test-windows-matrix.sh  update-scenario-status.sh
scripts/host/: verify-cat.sh  verify-getxattr.sh  verify-info.sh  verify-ls.sh  verify-parts.sh  verify-readlink.sh  verify-stat.sh  verify-tree.sh
scripts/vm/: win-cat-via-mount.ps1  win-rename.ps1  win-unlink.ps1
scripts/win/: _lib.ps1  win-ls-via-mount.ps1  win-mkdir.ps1  win-rmdir.ps1  win-write.ps1
tests/: state-machine.sh
tests/mock-fs/: Cargo.toml
tests/mock-fs/scenarios/: harness.toml  test-matrix.json
tests/mock-fs/src/: main.rs
