[package]
name = "fs-test-harness-runner"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Runner for fs-test-harness: lib + run-matrix bin"
publish = false

[lib]
name = "fs_test_harness"
path = "src/lib.rs"

[[bin]]
name = "run-matrix"
path = "src/bin/run-matrix.rs"

[dependencies]
libtest-mimic = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
